src/components/WorksCategory/CategoryItem.scss
.category-item__container {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  transition: all 0.3s;
  background: linear-gradient(
    150deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(27, 27, 27, 0.92) 0%,
    rgba(18, 18, 18, 1) 100%
  );
  height: 600px;
  border-radius: 22px;
  transition: border 0.3s;
  border: transparent 1px solid;

  @media screen and (max-width: 960px) {
    height: 400px;
  }

  > h4 {
    color: #cc84ff;
    font-size: 4rem;
    overflow-wrap: anywhere;

    @media screen and (max-width: 960px) {
      font-size: 3rem;
    }
  }

  > button {
    border: none;
    font-size: 18px;
    padding: 18px 32px;
    background-color: rgba(255, 255, 255, 0.073);
    border-radius: 12px;
    color: #fff;
    font-weight: 300;
    cursor: pointer;
    transition: all 0.3s;
  }
  > button:hover {
    background-color: #cc84ff;
  }
}

.category-item__container:hover {
  border: 1px solid rgba(255, 255, 255, 0.117);
}

